2024-05-19  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-04-27  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION (Version, Date): Release 0.0.11

2024-04-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/ql/time/calendars/brazil.{cpp,hpp}: Updated from QuantLib 1.34 (rc)
	* src/ql/time/calendars/india.cpp: Idem
	* src/ql/time/calendars/singapore.{cpp,hpp}: Idem
	* src/ql/time/calendars/southafrica.cpp: Idem
	* src/ql/time/calendars/thailand.cpp: Idem
	* src/ql/time/calendars/unitedstates.cpp: Idem
	* src/ql/patterns/observable.{cpp,hpp}: Idem
	* src/ql/time/date.hpp: Idem

2024-02-19  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
	add r-ci-setup actions

2024-01-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.10

2024-01-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/ql/time/calendars/mexico.{cpp,hpp}: Updated from QuantLib 1.33

2024-01-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/ql/time/calendars/brazil.{cpp,hpp}: Updated from QuantLib 1.33 (rc)
	* src/ql/time/calendars/chile.{cpp,hpp}: Idem
	* src/ql/time/calendars/china.cpp: Idem
	* src/ql/time/calendars/southafrica.cpp: Idem
	* src/ql/time/calendars/taiwan.{cpp,hpp}: Idem
	* src/ql/time/calendars/thailand.{cpp,hpp}: Idem
	* src/ql/time/calendars/unitedstates.{cpp,hpp}: Idem
	* src/ql/patterns/observable.{cpp,hpp}: Idem
	* src/ql/time/date.hpp: Idem

2023-11-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.9

	* src/RcppExports.cpp: Regenerated with updated Rcpp to avoid an
	issue triggered by -Wformat-security warning under R-devel
	* R/RcppExports.R: Idem

2023-10-25  Dirk Eddelbuettel  <edd@debian.org>
